--- a/public/style.css
+++ b/public/style.css
@@ -82,7 +82,7 @@
   
   .header-content {
     padding: var(--padding);
-    align-content: center;
+    align-items: center;
   }
   
   .header-title {
