center align attempt 3

--- a/public/style.css
+++ b/public/style.css
@@ -71,7 +71,6 @@
   }
   
   header {
-    align-items: center;
     grid-area: header;
     font-size: 1.2em;
     border: var(--border);
@@ -82,7 +81,7 @@
   
   .header-content {
     padding: var(--padding);
-    align-items: center;
+    text-align: center;
   }
   
   .header-title {
