style nav + fix footer

--- a/public/style.css
+++ b/public/style.css
@@ -45,9 +45,9 @@
     background: rgba(0, 0, 0, 0.2);
   }
   
-  a {
+  /* a {
     text-decoration: underline;
-  }
+  } */
   
   a,
   a:visited {
