--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@
   .layout {
     display: grid;
     grid-gap: var(--margin);
-    max-width: 1200px;
+    width: 100%;
     grid-template: "header header header" auto "leftSidebar main rightSidebar" auto "footer footer footer" auto / var(--sidebar-width) auto var(--sidebar-width);
   }
   
