--- a/public/comment-widget-pink.css
+++ b/public/comment-widget-pink.css
@@ -60,7 +60,7 @@
     overflow: auto;
     background-image: url(''); /* F2U background provided by https://sadgrl.online/webmastery/downloads/tiledbgs */
     background-attachment: fixed;
-    font-family: 'Trebuchet MS';
+    font-family: Helvetica, sans-serif;
     font-size: 14px;
     color: #211F24;
 }
@@ -100,8 +100,7 @@
 #c_widgetTitle {
     margin: 0;
     padding: 0;
-    font-style: italic;
-    text-decoration: underline;
+    font-family: Courier New, monospace;
 }
 
 .c-inputWrapper {
