--- a/public/comment-widget-pink.css
+++ b/public/comment-widget-pink.css
@@ -101,6 +101,8 @@
     margin: 0;
     padding: 0;
     font-family: Courier New, monospace;
+    color: #392061;
+    font-size: 12px;
 }
 
 .c-inputWrapper {
@@ -131,16 +133,16 @@
     margin-bottom: 10px;
     padding: 10px;
     background-color: rgba(255, 255, 255, .75);
-    border: 1px dashed #CE98FB;
-    border-radius: 4px;
+    border: 2px dotted #cb8589;
+    border-radius: 8px 8px 0px 0px;
 }
 .c-reply {
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
     background-color: rgba(255, 255, 255, 1);
-    border: 1px dashed #CE98FB;
-    border-radius: 4px;
+    border: 2px dotted #cb8589;
+    border-radius: 8px 8px 0px 0px;
 }
 .c-reply:last-child {margin-bottom: 0;}
 
@@ -149,7 +151,6 @@
     margin: 0;
     margin-right: 10px;
     padding: 0;
-    text-decoration: underline;
 }
 .c-site {
     text-transform: lowercase;
