--- a/public/comment-widget-pink.css
+++ b/public/comment-widget-pink.css
@@ -92,8 +92,8 @@
     padding: 10px;
     text-transform: lowercase;
     background-color: rgba(255, 255, 255, .8);
-    border: 1px dashed #CE98FB;
-    border-radius: 5px;
+    border: 2px dotted #cb8589;
+    border-radius: 8px 8px 0px 0px;
 }
 #c_container {margin-top: 10px;}
 
@@ -102,7 +102,6 @@
     padding: 0;
     font-family: Courier New, monospace;
     color: #392061;
-    font-size: 12px;
 }
 
 .c-inputWrapper {
@@ -134,7 +133,7 @@
     padding: 10px;
     background-color: rgba(255, 255, 255, .75);
     border: 2px dotted #cb8589;
-    border-radius: 8px 8px 0px 0px;
+    border-radius: 8px;
 }
 .c-reply {
     margin-top: 10px;
@@ -142,7 +141,7 @@
     padding: 10px;
     background-color: rgba(255, 255, 255, 1);
     border: 2px dotted #cb8589;
-    border-radius: 8px 8px 0px 0px;
+    border-radius: 8px;
 }
 .c-reply:last-child {margin-bottom: 0;}
 
