--- a/public/style.css
+++ b/public/style.css
@@ -254,10 +254,11 @@
   nav ul summary {
     cursor: pointer;
   }
-  
+
   /* (submenu) */
+  
   nav ul ul li > a {
-    padding-left: 30px;
+    padding-left: 10px;
   }
   
   header nav {
@@ -526,6 +527,10 @@
   
   .images img {
     width: 50%;
+    height: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     padding: 5px;
   }
   
