--- a/public/style.css
+++ b/public/style.css
@@ -257,6 +257,12 @@
 
   /* (submenu) */
   
+  li summary {
+    list-style-position:outside;
+    margin-left:15px; 
+    position:relative;
+  }
+
   nav ul ul li > a {
     padding-left: 10px;
   }
