--- a/docs/statuscafe.css
+++ b/docs/statuscafe.css
@@ -43,7 +43,7 @@
   }
   #statuscafe-content {
     font-size: small;
-    margin: 0px 0px 8px 8px;
+    /* margin: 0px 0px 8px 8px; */
     padding: var(--padding);
     font-family: var(--font);
     /* border: var(--dotted-border); */
