disabled about link

--- a/public/style.css
+++ b/public/style.css
@@ -287,6 +287,11 @@
     padding-right: 0;
   }
 
+  a.disabled {
+    pointer-events: none;
+    cursor: default;
+  }
+
   /* -------------------------------------------------------- */
   /* BLOG */
 
