--- a/public/style.css
+++ b/public/style.css
@@ -290,6 +290,7 @@
   a.disabled {
     pointer-events: none;
     cursor: default;
+    text-decoration: none;
   }
 
   /* -------------------------------------------------------- */
